--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- for csv download -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+
     </dependencies>
     
 </project>
